--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
   font-family: 'Open Sans', sans-serif;
   color: #eeeeee;
   font-size: 2rem;
@@ -35,7 +35,7 @@ h6 {
 
 main {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgba(51, 10, 0, 0.7);
   display: flex;
   align-items: center;
@@ -49,28 +49,40 @@ h1 {
 
 #library {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgba(51, 10, 0, 0.7);
 }
 
 .book {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin: 1rem 0;
   padding: 2rem;
 }
 
-.book-info {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+.book-cover {
+  width: 75%;
+  height: auto;
 }
 
 .book-author {
   font-weight: bold;
   font-size: 2.25rem;
   letter-spacing: 0.15rem;
+  margin: 1rem;
+}
+
+.book-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.book-pages,
+.book-read {
+  margin: 1rem;
 }
