--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ h6 {
 
 main {
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: rgba(51, 10, 0, 0.7);
   display: flex;
   align-items: center;
@@ -59,7 +59,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 1rem 0;
+  margin: 1rem 0 5rem;
   padding: 2rem;
 }
 
@@ -102,7 +102,7 @@ form {
   background-color: #eee;
   color: rgb(51, 10, 0);
   padding: 2rem;
-  box-shadow: 2.5px 5px rgba(51, 10, 0, 0.5);
+  box-shadow: 2.5px 5px 5px rgba(51, 10, 0, 0.5);
   transition: 750ms;
 }
 
